Version 0.3:
	* Inital logged release.